Changed design of the header

--- a/index.html
+++ b/index.html
@@ -6,50 +6,58 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/main.css">
-        <title>Главнвая</title>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <title>Главная</title>
     </head>
     <body>
 
         <header>
-            <div class="topnav">
-                <span class="logo">Уникум</span>
-                <a href="index.html" class="active">Главная</a>
-                <a href="#">Ученики</a>
-                <a href="#">Расписание</a>
-                <a href="#">Игры</a>
-                <a href="#">Абонименты</a>
-                <a href="#">Рейтинг</a>
-                <a href="#">Настройки</a>
-                <a href="#" class="help">Помощь</a>
+            <div class="first-row">
+                <div class="logo">
+                    <img src="img/logo.jpg" alt="logo">
+                </div>
+                <div class="topnav">
+                    <a href="index.html" class="active">Главная</a>
+                    <a href="#">Ученики</a>
+                    <a href="#">Расписание</a>
+                    <a href="#">Игры</a>
+                    <a href="#">Абонименты</a>
+                    <a href="#">Рейтинг</a>
+                    <a href="#">Настройки</a>
+                    <a href="#">Помощь</a>
+                </div>
+            </div>
+
+            <div class="second-column">
+                <div class="user-bar">
+                    <div class="user-info">
+                        <div class="user-photo"></div>
+                        <div class="user-name">Мария</div>
+                        <div class="user-options">
+                            <div>
+                                <a href="#">Профиль</a>
+                            </div>
+                            <div>
+                                <a href="#">Изменить пароль</a>
+                            </div>
+                            <div>
+                                <a href="#">Выйти</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="main-bar">
+
+                </div>
+
+                <div class="opt-bar">
+                </div>
             </div>
         </header>
 
         <main>
-            <div class="user-bar">
-                <div class="user-info">
-                    <div class="user-photo"></div>
-                    <div class="user-options">
-                        <div>
-                            <a href="#">Профиль</a>
-                        </div>
-                        <div>
-                            <a href="#">Изменить пароль</a>
-                        </div>
-                        <div>
-                            <a href="#">Выйти</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="main-bar">
 
-            </div>
-
-            <div class="opt-bar">
-                <div class="opt-info">
-
-                </div>
-            </div>
         </main>
 
     </body>
