Added main and footer

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <title>Главная</title>
     </head>
     <body>
 
         <header>
-            <div class="first-row">
+            <div class="first-column">
                 <div class="logo">
                     <img src="img/logo.jpg" alt="logo">
+                    <!--<img src="img/logotest.png" alt="logo">-->
                 </div>
                 <div class="topnav">
                     <a href="index.html" class="active">Главная</a>
@@ -59,6 +61,56 @@
         <main>
 
         </main>
+
+
+        <footer>
+            <div class="footer-container">
+                <div class="footer-nav">
+                    <div>
+                        <a href="#">Главная</a>
+                    </div>
+                    <div>
+                        <a href="#">Ученики</a>
+                    </div>
+                    <div>
+                        <a href="#">Расписание</a>
+                    </div>
+                    <div>
+                        <a href="#">Игры</a>
+                    </div>
+                    <div>
+                        <a href="#">Абонименты</a>
+                    </div>
+                    <div>
+                        <a href="#">Рейтинг</a>
+                    </div>
+                    <div>
+                        <a href="#">Настройки</a>
+                    </div>
+                    <div>
+                        <a href="#">Помощь</a>
+                    </div>
+                </div>
+
+                <div class="footer-brand">
+                    <div>
+                        <a href="#" class="fab fa-vk fa-2x"></a>
+                    </div>
+                    <div>
+                        <a href="#" class="fab fa-youtube fa-2x"></a>
+                    </div>
+                    <div>
+                        <a href="#" class="fab fa-instagram fa-2x"></a>
+                    </div>
+                    <div>
+                        <a href="#" class="fab fa-google-plus fa-2x"></a>
+                    </div>
+                </div>
+            </div>
+            <span>
+                &copy; Unikum 2018
+            </span>
+        </footer>
 
     </body>
 </html>
