--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <header>
             <div class="first-column">
                 <div class="logo">
-                    <img src="img/logo.jpg" alt="logo">
-                    <!--<img src="img/logotest.png" alt="logo">-->
+                    <img src="img/uniqum.png" alt="logo">
                 </div>
                 <div class="topnav">
                     <a href="index.html" class="active">Главная</a>
@@ -50,7 +49,6 @@
                 </div>
 
                 <div class="main-bar">
-
                 </div>
 
                 <div class="opt-bar">
@@ -59,7 +57,52 @@
         </header>
 
         <main>
+            <div class="main-header">
+                <div class="hd-brand">
+                    <div class="title-sign">ГЛ</div>
+                </div>
+                <div class="hd-title">
+                    <h1>
+                        Главный Заголовок
+                    </h1>
+                    <span class="hd-divider"></span>
+                    <h2>Главный Подзаголовок</h2>
+                </div>
+            </div>
 
+            <div class="main-body">
+
+                <h3>Заголовок статьи</h3>
+                <p>
+                    Лорем ипсум долор сит амет, цу нец еррор граеци малуиссет. Еа хис саперет деленити хендрерит. Яуот фацете еи вим, трацтатос адиписцинг ин хис. Сед суммо муциус ет. Пробо ноструд бландит те пер, ат нулла ноструд меи.
+
+                    Дуо популо алиенум репримияуе ут, дуо сцрипта аперири губергрен ех, одио дицант вивендум еу усу. Саепе цонгуе сусципиантур те при. Еррем долорум диспутандо сед ин. Ат ферри волутпат нам. Омнесяуе торяуатос интерпретарис ут еум. Тота фиерент яуо ан.
+
+                    Пробо лобортис ет дуо, ат про неморе алтерум сцаевола. Фацилисис аргументум но хас, малис еверти вис ид, яуи цонсул детрацто салутанди еа. Алияуам рецусабо дуо ех, вел яуот аперири орнатус ад, вертерем сплендиде ет пер. Граецис цомплецтитур ех цум, идяуе алтерум волуптатибус мел ех, ад деленит репримияуе хас. Вери солум вулпутате вим но, еррем воцибус симилияуе ут ест.
+                </p>
+
+                <h3>Заголовок статьи</h3>
+                <p>
+                    Мовет аццусата ад при. При ан цопиосае диссентиунт, нам еа вертерем инимицус. Аутем долоре тибияуе яуо ан, ад меа яуод сапиентем интеллегебат. Еу яуо децоре еурипидис цомпрехенсам, еи вим виси вирис интеллегат.
+
+                    Иус пхаедрум атоморум те, еос идяуе татион легере ех, не магна дебет пертинах усу. Омнес сенсибус ет усу, ест мовет индоцтум реферрентур ан. Дуо промпта веритус апеириан ан, еа реяуе десерунт атоморум нам. Ад диспутатиони дефинитионес усу, лаборес суавитате нам ин. Хис цу агам цоммодо елецтрам. Губергрен медиоцритатем яуи еа, сит ут анциллае интерпретарис, импедит тациматес репримияуе те еос.
+
+                    Ат прима феугиат цонцептам нам. Ин еррем сплендиде ест. Деленит елецтрам петентиум при ан. Ут менандри репримияуе при. Веро нусяуам еа еам, яуо игнота десеруиссе еу.
+
+                    Хис ириуре хендрерит реферрентур ат. Ех аццусам номинати сед. Луцилиус цоррумпит еам но, меис еффициантур меи цу. Сеа нибх антиопам ид. Еа оффендит десеруиссе иус, меа ех аетерно инвидунт перципитур.
+
+                    Ех еррорибус губергрен волуптариа еам. Ин либер фуиссет адиписцинг еам. Хас цу видит риденс мелиоре, новум хабемус не меа. Иллум тимеам хабемус цу еос, путант импердиет волуптатум ид вис, меи те дицам нострум оффициис. Стет лаудем еу яуо, тибияуе инцоррупте хонестатис вел ех. Еам те мовет цонсететур, ет пауло торяуатос реформиданс мел. Меа прима сонет тхеопхрастус ет.
+                </p>
+
+                <h3>Заголовок статьи</h3>
+                <p>
+                    Ех еррорибус губергрен волуптариа еам. Ин либер фуиссет адиписцинг еам. Хас цу видит риденс мелиоре, новум хабемус не меа. Иллум тимеам хабемус цу еос, путант импердиет волуптатум ид вис, меи те дицам нострум оффициис. Стет лаудем еу яуо, тибияуе инцоррупте хонестатис вел ех. Еам те мовет цонсететур, ет пауло торяуатос реформиданс мел. Меа прима сонет тхеопхрастус ет.
+
+                    Цу хинц граецо дицунт вел. Видит аппеллантур еи вих, те вим симул сплендиде. Еи неморе еррорибус дигниссим усу, еу неморе ерудити яуо. Тамяуам аццусата еум цу, ет губергрен диссентиунт хис, дицит либрис сеа ех.
+                </p>
+            </div>
+
+            <div class="main-footer">Footer</div>
         </main>
 
 
