Changed main tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <header>
-            <div class="first-column">
+            <div class="header-container">
                 <div class="logo">
                     <img src="img/uniqum.png" alt="logo">
                 </div>
@@ -29,32 +29,36 @@
                 </div>
             </div>
 
-            <div class="second-column">
-                <div class="user-bar">
-                    <div class="user-info">
-                        <div class="user-photo"></div>
-                        <div class="user-name">Мария</div>
-                        <div class="user-options">
-                            <div>
-                                <a href="#">Профиль</a>
-                            </div>
-                            <div>
-                                <a href="#">Изменить пароль</a>
-                            </div>
-                            <div>
-                                <a href="#">Выйти</a>
-                            </div>
+        </header>
+
+        <main>
+            <div class="user-bar">
+                <div class="user-info">
+                    <div class="user-photo"></div>
+                    <div class="user-name">Мария</div>
+                    <div class="user-options">
+                        <div>
+                            <a href="#">Профиль</a>
+                        </div>
+                        <div>
+                            <a href="#">Изменить пароль</a>
+                        </div>
+                        <div>
+                            <a href="#">Выйти</a>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="main-bar">
-                </div>
-
-                <div class="opt-bar">
+            <div class="main-bar">
+                <div class="main-container">
+                    <h1>Hello Pipiska</h1>
                 </div>
             </div>
-        </header>
+
+            <div class="opt-bar">
+            </div>
+        </main>
 
         <!--<main>-->
             <!--<div class="main-header">-->
