--- a/index.html
+++ b/index.html
@@ -18,14 +18,21 @@
                     <img src="img/uniqum.png" alt="logo">
                 </div>
                 <div class="topnav">
-                    <a href="index.html" class="active">Главная</a>
+                    <a href="index.html" class="active">Группы</a>
                     <a href="#">Ученики</a>
-                    <a href="#">Расписание</a>
-                    <a href="#">Игры</a>
-                    <a href="#">Абонименты</a>
+                    <!--<a href="#">Расписание</a>-->
+                    <a href="#">Статистика</a>
+                    <!--<a href="#">Абонименты</a>-->
                     <a href="#">Рейтинг</a>
-                    <a href="#">Настройки</a>
+                    <!--<a href="#">Настройки</a>-->
                     <a href="#">Помощь</a>
+                    <span class="nav-options">
+                        <a href="#" class="fas fa-envelope" id="messages"></a>
+                        <a href="#" class="fas fa-sign-out-alt" id="signout"></a>
+                    </span>
+                </div>
+                <div class="head-options">
+
                 </div>
             </div>
 
@@ -36,23 +43,63 @@
                 <div class="user-info">
                     <div class="user-photo"></div>
                     <div class="user-name">Мария</div>
+                    <div class="user-name">Иванова</div>
+
                     <div class="user-options">
-                        <div>
-                            <a href="#">Профиль</a>
-                        </div>
-                        <div>
-                            <a href="#">Изменить пароль</a>
-                        </div>
-                        <div>
-                            <a href="#">Выйти</a>
-                        </div>
                     </div>
+                </div>
+
+                <div class="widgets">
+                    <div class="w-item">Столбцы</div>
+                    <div class="w-item">Форсаж</div>
+                    <div class="w-item">Флеш</div>
+                    <div class="w-item">...</div>
                 </div>
             </div>
 
             <div class="main-bar">
-                <div class="main-container">
-                    <h1>Hello Pipiska</h1>
+                <h1>Главный заголовок</h1>
+                <div class="first-container">
+                    <div class="statistic-block article-block">
+                        <h2>Статистика</h2>
+                        <p>
+                            Лорем ипсум долор сит амет, цу нец еррор граеци малуиссет. Еа хис саперет деленити хендрерит. Яуот фацете еи вим, трацтатос адиписцинг ин хис. Сед суммо муциус ет. Пробо ноструд бландит те пер, ат нулла ноструд меи.
+
+                            Дуо популо алиенум репримияуе ут, дуо сцрипта аперири губергрен ех, одио дицант вивендум еу усу. Саепе цонгуе сусципиантур те при. Еррем долорум диспутандо сед ин. Ат ферри волутпат нам. Омнесяуе торяуатос интерпретарис ут еум. Тота фиерент яуо ан.
+
+                            Пробо лобортис ет дуо, ат про неморе алтерум сцаевола. Фацилисис аргументум но хас, малис еверти вис ид, яуи цонсул детрацто салутанди еа. Алияуам рецусабо дуо ех, вел яуот аперири орнатус ад, вертерем сплендиде ет пер. Граецис цомплецтитур ех цум, идяуе алтерум волуптатибус мел ех, ад деленит репримияуе хас. Вери солум вулпутате вим но, еррем воцибус симилияуе ут ест.
+                        </p>
+                    </div>
+
+                    <div class="settings-block article-block">
+                        <h2>Быстрый длступ к настройкам</h2>
+                        <p>
+                            Мовет аццусата ад при. При ан цопиосае диссентиунт, нам еа вертерем инимицус. Аутем долоре тибияуе яуо ан, ад меа яуод сапиентем интеллегебат. Еу яуо децоре еурипидис цомпрехенсам, еи вим виси вирис интеллегат.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="second-container">
+                    <div class="rating-block article-block">
+                        <h2>Рейтинг Учеников</h2>
+                        <p>
+                            Иус пхаедрум атоморум те, еос идяуе татион легере ех, не магна дебет пертинах усу. Омнес сенсибус ет усу, ест мовет индоцтум реферрентур ан. Дуо промпта веритус апеириан ан, еа реяуе десерунт атоморум нам. Ад диспутатиони дефинитионес усу, лаборес суавитате нам ин. Хис цу агам цоммодо елецтрам. Губергрен медиоцритатем яуи еа, сит ут анциллае интерпретарис, импедит тациматес репримияуе те еос.
+                        </p>
+                    </div>
+
+                    <div class="additional-block article-block">
+                        <h2>Дополнителтная информация</h2>
+                        <p>
+                            Ат прима феугиат цонцептам нам. Ин еррем сплендиде ест. Деленит елецтрам петентиум при ан. Ут менандри репримияуе при. Веро нусяуам еа еам, яуо игнота десеруиссе еу.
+                        </p>
+                    </div>
+
+                    <div class="access-block article-block">
+                        <h2>Приглашение учеников в группу</h2>
+                        <p>
+                            Хис ириуре хендрерит реферрентур ат. Ех аццусам номинати сед. Луцилиус цоррумпит еам но, меис еффициантур меи цу. Сеа нибх антиопам ид. Еа оффендит десеруиссе иус, меа ех аетерно инвидунт перципитур.
+                        </p>
+                    </div>
                 </div>
             </div>
 
